[package]
name = "kernel"
version = "0.1.0"
authors = ["Dennis Restle <derestle@htwg-konstanz.de>"]

[lib]
crate-type = ["staticlib"]


[dependencies]
volatile = "0.2.3"
spin = "0.4.6"
multiboot2 = "0.1.0"
x86_64 = "0.2.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
